[3.0.7]
        * [ADDED]: #2875 Fixed font misconfiguration after Qt update.
        * [ADDED]: #2879 Fixed View updating after table modification, when view uses SELECT with table alias same as table name.
        * [ADDED]: #2885 Fixed tokens parsing, causing random problems, such as incorrect formatting performed by the simple formatter.
        * [ADDED]: Fixed duplicates while copying mupltiple lines from status field.

[3.0.6]
        * [ADDED]: #2740 Option to configure whether bottom dock area (with status field) should extend to left border, or should it leave space for database list.
        * [ADDED]: #2819 Introduced "compact layout" as an option (enabled by default) to minimize all margins on the interface.
        * [ADDED]: CSS console for SQLiteStudio (under F11 key) to allow customizing all aspects UI look and feel at a low level.
        * [ADDED]: #2805 The 'Save SQL' action in SQL editor now uses the same file if repeated, unless user picks 'select file to save' from drop-down menu.
        * [ADDED]: #2801 Added option to select where to position the new inserted row - above/below selected row, or at the end of data view.
        * [CHANGE]: Database list is by default from top to bottom, making the status field placed next to the database list, instead of being below it.
        * [BUGFIX]: Fixed 'rows affected' counter when using transactions and executing everything at once.
        * [BUGFIX]: Fixed importing from CSV with empty (NULL) values in last column of last data row.
        * [BUGFIX]: #2853 Allow '$' character as a part of an identifier.
        * [BUGFIX]: #2846 Fixed crash when executing query on a database after just removed other database from the list.
        * [BUGFIX]: #2856 Fixed not working updates manual checking if automatic checking was disabled.
        * [BUGFIX]: #2863 Fixed config dialog to honor DbTree presentation options (sorting, labels) immediately, no manual refreshing required.